# vigjibot

./: .gitignore  all_models.json  all_runs_df.csv  community_benchmark.py  custom_community_benchmark.py  custom_forecaster.py  main.py  main_w_aggregation.py  main_with_no_framework.py  metaforecast_fetcher.py  pyproject.toml  scratch.py  test_custom_cache.py  utils.py
.github/workflows/: run_bot_on_quarterly_cup.yaml  run_bot_on_tournament.yaml  test_bot.yaml
analysis_scripts/: all_runs_df.csv  analysis_utils.py  analyze_run_results.py  checkout_pooled.py  common_markets.py  deleteme.py  embedding_utils.py  embeddings_cache_BAAI.bge-m3.csv  find_questions.py  find_similar.py  folder_struct.txt  gjopen.py  manimarket_query.py  metamarket_fetch.py  outdated_polymarket_clob_scraping.py  parse_all.py  parser_gjopen.py  parser_manimarket.py  parser_metaculus.py  parser_polygamma.py  parser_predictit.py  polymarket_gamma_api.py  polymarket_scraping.py  predictit_parser.py  predictit_scraping.py  question_embeddings.py  questions_df.csv  save_embeddings.py  save_poly_questions.py  utils.py  visualize_embeddings.py
data/cache/: GoodJudgmentOpen_20250512_004535.json  GoodJudgmentOpen_20250512_124019.json  GoodJudgmentOpen_20250512_140133.json  GoodJudgmentOpen_20250512_141059.json  GoodJudgmentOpen_20250512_161734.json  GoodJudgmentOpen_20250512_162504.json  Manifold_20250512_022606.json  Manifold_20250512_140302.json  Manifold_20250512_141233.json  Manifold_20250512_161829.json  Manifold_20250512_162549.json  Metaculus_20250512_162058.json  PredictIt_20250512_031448.json  (+14 more)
