[project]
name = "metac-bot-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasile Popescu", email = "elisescu@elisescu.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "asknews==0.11.7",
    "numpy>=1.26.0",
    "openai>=1.57.4",
    "python-dotenv>=1.0.1",
    "forecasting-tools>=0.2.23",
    "ipykernel>=6.29.5",
    "mootlib>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

